hopefully fix squishing of avatars in email

--- a/app/assets/stylesheets/vtfy/mailers.scss
+++ b/app/assets/stylesheets/vtfy/mailers.scss
@@ -52,8 +52,6 @@ body { font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 .base-mailer__avatar-initials {
   margin: 2px auto;
   border: 1px solid #dcdcdc;
-  max-width: 100%;
-  max-height: 100%;
   border-radius: 50%;
   font-size: 12px;
 }
@@ -61,10 +59,6 @@ body { font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 .base-mailer__avatar-image {
   border-radius: 50%;
   object-fit: cover;
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  max-height: 100%;
 }
 
 .base-mailer__button {
